Cleanup startup and shutdown test method calls